# rust-twitter-clone

./: .env  .env.example  .gitignore  Cargo.toml  README.md
client/: package-lock.json  package.json
src/: main.rs  registry.rs  render_context.rs  repos.rs  request_ext.rs  route_ext.rs  routes.rs  templates.rs
src/repos/: user.rs
src/routes/: account.rs  auth.rs
static/: 2fa.html  index.html  login.html  otp.html  register.html  settings.html
